UT05 async/await

--- a/UT05 Programación asíncrona/asincronismo.html
+++ b/UT05 Programación asíncrona/asincronismo.html
@@ -10,7 +10,7 @@
   <body>
     <input type="button" id="boton" value="Asincronismo fácil" />
     <div id="contenedor"></div>
-    <script type="module" src="script.js"></script>
-    <!-- <script type="module" src="scripts_funciones.js"></script> -->
+    <!-- <script type="module" src="script.js"></script> -->
+    <script type="module" src="script_async_await.js"></script>
   </body>
 </html>
