--- a/UT06 Almacenamiento/index.html
+++ b/UT06 Almacenamiento/index.html
@@ -22,7 +22,7 @@
       </main>
       <footer id="informacion">Información</footer>
     </div>
-    <script type="module" src="./js/script.js"></script>
-    <!-- <script type="module" src="./js/script_CRUD.js"></script> -->
+    <!-- <script type="module" src="./js/script.js"></script> -->
+    <script type="module" src="./js/script_CRUD.js"></script>
   </body>
 </html>
