--- a/UT06 Almacenamiento/index.html
+++ b/UT06 Almacenamiento/index.html
@@ -15,8 +15,20 @@
       <main>
         <section>
           <article>
-            <input type="button" id="guardar" value="Guardar" />
+            <label for="usuario">Usuario</label>
+            <input type="text" id="usuario" />
+            <label for="consigna">Contraseña</label>
+            <input type="text" id="consigna" />
+            <div>
+              <input type="button" id="iniciar" value="Iniciar sesión" />
+              <input type="button" id="crear" value="Crear usuario" />
+              <input type="button" id="cerrar" value="Cerrar sesión" />
+            </div>
+            <div id="informe"></div>
           </article>
+          <!-- <article>
+            <input type="button" id="guardar" value="Guardar" />
+          </article> -->
           <article id="datos">Artículo 1</article>
         </section>
       </main>
@@ -24,6 +36,7 @@
     </div>
     <!-- <script type="module" src="./js/script.js"></script> -->
     <!-- <script type="module" src="./js/script_CRUD.js"></script> -->
-    <script type="module" src="./js/script_storage.js"></script>
+    <!-- <script type="module" src="./js/script_storage.js"></script> -->
+    <script type="module" src="./js/script_auth.js"></script>
   </body>
 </html>
