--- a/UT02 Sintaxis, funciones y componentes/index.html
+++ b/UT02 Sintaxis, funciones y componentes/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- <script src="funciones.js"></script> -->
-    <!-- <script src="objetos.js"></script> -->
-    <script src="array.js"></script>
+    <script src="objetos.js"></script>
+    <!-- <script src="array.js"></script> -->
   </body>
 </html>
